subindo terceira atividade CSS

--- a/Welington rodrigues/workspace/HTML/Aula.03/ListasNãoOrdenadas.html
+++ b/Welington rodrigues/workspace/HTML/Aula.03/ListasNãoOrdenadas.html
@@ -11,7 +11,7 @@
     <h1>Elemento de listas não ordenadas</h1>
 
     <p>Bebidas preferidas:</p>
-    <ul>
+    <ul type="numerada">
         <li>Café</li>
         <li>Chá</li>
         <li>Leite</li>
