--- a/Welington rodrigues/workspace/CSS/CssExercicio.html
+++ b/Welington rodrigues/workspace/CSS/CssExercicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Geek</title>
+    <title>Portal Geek, Familia Geek</title>
     <link rel="stylesheet" href="Exercico.css">
 </head>
 
@@ -61,7 +61,9 @@
                         modelos.</p>
                     <img src="akatsuki.webp" alt="mochila akatsuki" width="400" height="400"> <!-- Imagem do produto -->
                 </article>
-                <article>&copy; Welington rodrigues, 2023</article>
+                <footer>
+                    &copy; Familia Geek, 2023
+                </footer>
             </section>
         </div>
     </main>
