subindo todos os arquivos atrasados

--- a/Welington rodrigues/workspace/CSS/08FloatDisplaybox/atividade08.html
+++ b/Welington rodrigues/workspace/CSS/08FloatDisplaybox/atividade08.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="float.css">
     <title>Minhas Inspirações</title>
 </head>
 
 <body>
     <main>
-        <div>
+        <div class="box">
             <h1>
                 Minha primeira inspiração
             </h1>
@@ -18,15 +19,16 @@
                 MC Kevin
             </h2>
             <div>
-                <figure><img src="kevin.jpg" alt=""></figure>
-                <p>O MC Kevin é minha primeira inspiração por conta que ele canta nas musicas dele a sua história e virada de vida atravéz do funk,
+                <figure><img class="img" src="kevin.jpg" alt=""></figure>
+                <p>O MC Kevin é minha primeira inspiração por conta que ele canta nas musicas dele a sua história e
+                    virada de vida atravéz do funk,
                     ensina atravéz das musicas dele, para que pessoas nunca desistirem de seus sonhos.
                 </p>
             </div>
 
         </div>
 
-        <div>
+        <div class="box">
             <h1>
 
             </h1>
@@ -34,14 +36,14 @@
 
             </h2>
             <div>
-                <figure><img src="urus.png" alt=""></figure>
+                <figure><img class="img" src="urus.png" alt=""></figure>
                 <p>O Lamborghini Urus é um crossover superesportivo desenvolvido pela marca italiana em parceria com o
                     grupo Volkswagen, seu controlador através da Audi.</p>
             </div>
 
         </div>
 
-        <div>
+        <div class="box">
             <h1>
 
             </h1>
@@ -49,7 +51,7 @@
 
             </h2>
             <div>
-                <figure><img src="urus.png" alt=""></figure>
+                <figure><img class="img" src="urus.png" alt=""></figure>
                 <p>O Lamborghini Urus é um crossover superesportivo desenvolvido pela marca italiana em parceria com o
                     grupo Volkswagen, seu controlador através da Audi.</p>
             </div>
